--- a/egg-demo/run/agent_config.json
+++ b/egg-demo/run/agent_config.json
@@ -7,13 +7,15 @@
       "encrypt": true
     },
     "security": {
-      "domainWhiteList": [],
+      "domainWhiteList": [
+        "*"
+      ],
       "protocolWhiteList": [],
       "defaultMiddleware": "csrf,hsts,methodnoallow,noopen,nosniff,csp,xssProtection,xframe,dta",
       "csrf": {
-        "enable": true,
+        "enable": false,
         "type": "ctoken",
-        "ignoreJSON": false,
+        "ignoreJSON": true,
         "useSession": false,
         "cookieName": "csrfToken",
         "sessionName": "csrfToken",
@@ -148,6 +150,10 @@
       "defaultViewEngine": "",
       "mapping": {}
     },
+    "cors": {
+      "credentials": true,
+      "allowMethods": "GET,HEAD,PUT,POST,DELETE,PATCH,OPTIONS"
+    },
     "env": "local",
     "name": "demo",
     "keys": "<String len: 23>",
@@ -168,6 +174,7 @@
       },
       "dependencies": {
         "egg": "^2.15.1",
+        "egg-cors": "^2.2.3",
         "egg-scripts": "^2.11.0"
       },
       "devDependencies": {
@@ -452,6 +459,17 @@
       "from": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg\\config\\plugin.js",
       "path": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-view",
       "version": "2.1.2"
+    },
+    "cors": {
+      "enable": true,
+      "package": "egg-cors",
+      "name": "cors",
+      "dependencies": [],
+      "optionalDependencies": [],
+      "env": [],
+      "from": "E:\\github\\Egg.js-App\\egg-demo\\config\\plugin.js",
+      "path": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-cors",
+      "version": "2.2.3"
     }
   }
 }
