--- a/egg-demo/run/application_config.json
+++ b/egg-demo/run/application_config.json
@@ -13,21 +13,22 @@
       "genid": "<Function v4>"
     },
     "security": {
-      "domainWhiteList": [],
+      "domainWhiteList": [
+        "*"
+      ],
       "protocolWhiteList": [],
       "defaultMiddleware": "csrf,hsts,methodnoallow,noopen,nosniff,csp,xssProtection,xframe,dta",
       "csrf": {
-        "enable": true,
+        "enable": false,
         "type": "ctoken",
-        "ignoreJSON": false,
+        "ignoreJSON": true,
         "useSession": false,
         "cookieName": "csrfToken",
         "sessionName": "csrfToken",
         "headerName": "x-csrf-token",
         "bodyName": "_csrf",
         "queryName": "_csrf",
-        "refererWhiteList": [],
-        "matching": "<Function anonymous>"
+        "refererWhiteList": []
       },
       "xframe": {
         "enable": true,
@@ -105,6 +106,7 @@
         "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-logrotator\\config\\locales",
         "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-static\\config\\locales",
         "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-view\\config\\locales",
+        "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-cors\\config\\locales",
         "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg\\config\\locales",
         "E:\\github\\Egg.js-App\\egg-demo\\config\\locales"
       ],
@@ -177,6 +179,11 @@
       "defaultViewEngine": "",
       "mapping": {}
     },
+    "cors": {
+      "credentials": true,
+      "allowMethods": "GET,HEAD,PUT,POST,DELETE,PATCH,OPTIONS",
+      "origin": "<Function corsOrigin>"
+    },
     "env": "local",
     "name": "demo",
     "keys": "<String len: 23>",
@@ -197,6 +204,7 @@
       },
       "dependencies": {
         "egg": "^2.15.1",
+        "egg-cors": "^2.2.3",
         "egg-scripts": "^2.11.0"
       },
       "devDependencies": {
@@ -310,6 +318,7 @@
       "logging": false
     },
     "coreMiddleware": [
+      "cors",
       "meta",
       "siteFile",
       "notfound",
@@ -498,6 +507,17 @@
       "from": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg\\config\\plugin.js",
       "path": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-view",
       "version": "2.1.2"
+    },
+    "cors": {
+      "enable": true,
+      "package": "egg-cors",
+      "name": "cors",
+      "dependencies": [],
+      "optionalDependencies": [],
+      "env": [],
+      "from": "E:\\github\\Egg.js-App\\egg-demo\\config\\plugin.js",
+      "path": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-cors",
+      "version": "2.2.3"
     }
   }
 }
