--- a/egg-demo/run/application_config.json
+++ b/egg-demo/run/application_config.json
@@ -107,6 +107,7 @@
         "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-static\\config\\locales",
         "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-view\\config\\locales",
         "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-cors\\config\\locales",
+        "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-mysql\\config\\locales",
         "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg\\config\\locales",
         "E:\\github\\Egg.js-App\\egg-demo\\config\\locales"
       ],
@@ -184,6 +185,21 @@
       "allowMethods": "GET,HEAD,PUT,POST,DELETE,PATCH,OPTIONS",
       "origin": "<Function corsOrigin>"
     },
+    "mysql": {
+      "default": {
+        "database": null,
+        "connectionLimit": 5
+      },
+      "app": true,
+      "agent": false,
+      "client": {
+        "host": "localhost",
+        "port": "3306",
+        "user": "root",
+        "password": "<String len: 16>",
+        "database": "react-diary"
+      }
+    },
     "env": "local",
     "name": "demo",
     "keys": "<String len: 23>",
@@ -205,6 +221,7 @@
       "dependencies": {
         "egg": "^2.15.1",
         "egg-cors": "^2.2.3",
+        "egg-mysql": "^3.0.0",
         "egg-scripts": "^2.11.0"
       },
       "devDependencies": {
@@ -518,6 +535,17 @@
       "from": "E:\\github\\Egg.js-App\\egg-demo\\config\\plugin.js",
       "path": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-cors",
       "version": "2.2.3"
+    },
+    "mysql": {
+      "enable": true,
+      "package": "egg-mysql",
+      "name": "mysql",
+      "dependencies": [],
+      "optionalDependencies": [],
+      "env": [],
+      "from": "E:\\github\\Egg.js-App\\egg-demo\\config\\plugin.js",
+      "path": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-mysql",
+      "version": "3.0.0"
     }
   }
 }
