--- a/egg-demo/run/application_config_meta.json
+++ b/egg-demo/run/application_config_meta.json
@@ -59,6 +59,21 @@
     "credentials": "E:\\github\\Egg.js-App\\egg-demo\\config\\config.default.js",
     "allowMethods": "E:\\github\\Egg.js-App\\egg-demo\\config\\config.default.js"
   },
+  "mysql": {
+    "client": {
+      "host": "E:\\github\\Egg.js-App\\egg-demo\\config\\config.default.js",
+      "port": "E:\\github\\Egg.js-App\\egg-demo\\config\\config.default.js",
+      "user": "E:\\github\\Egg.js-App\\egg-demo\\config\\config.default.js",
+      "password": "E:\\github\\Egg.js-App\\egg-demo\\config\\config.default.js",
+      "database": "E:\\github\\Egg.js-App\\egg-demo\\config\\config.default.js"
+    },
+    "app": "E:\\github\\Egg.js-App\\egg-demo\\config\\config.default.js",
+    "agent": "E:\\github\\Egg.js-App\\egg-demo\\config\\config.default.js",
+    "default": {
+      "database": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-mysql\\config\\config.default.js",
+      "connectionLimit": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-mysql\\config\\config.default.js"
+    }
+  },
   "session": {
     "maxAge": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-session\\config\\config.default.js",
     "key": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg-session\\config\\config.default.js",
@@ -169,6 +184,7 @@
     "dependencies": {
       "egg": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg\\config\\config.default.js",
       "egg-cors": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg\\config\\config.default.js",
+      "egg-mysql": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg\\config\\config.default.js",
       "egg-scripts": "E:\\github\\Egg.js-App\\egg-demo\\node_modules\\egg\\config\\config.default.js"
     },
     "devDependencies": {
