--- a/egg-demo/.gitignore
+++ b/egg-demo/.gitignore
@@ -1,4 +1,4 @@
-logs/*
+logs/
 # npm-debug.log
 # yarn-error.log
 node_modules/*
@@ -6,8 +6,8 @@ node_modules/*
 # yarn.lock
 # coverage/
 # .idea/
-run/*
-demo/*
+run/
+demo/
 # .DS_Store
 # *.sw*
 # *.un~
